<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.CatalogActivity">

    <!-- Empty view for the list -->
    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/empty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/treasure2" />

        <TextView
            android:id="@+id/empty_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/empty_image"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/empty_list"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/columnText"
            android:layout_width="@dimen/name_width"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/column_product_name" />

        <TextView
            style="@style/columnText"
            android:layout_width="@dimen/price_width"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/column_price" />

        <TextView
            style="@style/columnText"
            android:layout_width="@dimen/quantity_width"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/column_quantity" />

        <TextView
            style="@style/columnText"
            android:layout_width="@dimen/sale_width"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/column_sale" />

    </LinearLayout>

    <ListView
        android:id="@+id/inventory_list"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
